# M1-S2-Computer-Graphics

./: .gitignore  CMakeLists.txt  README.md
TD0/: CMakeLists.txt  cone.c  cylinder.c  sphere.c  torus.c  utils.h
